--- a/node/package.json
+++ b/node/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "postinstall": "npm run check-install",
-    "check-install": "node ./check-install.js"
+    "check-install": "node -e \"require('supercolliderjs').checkInstall()\""
   },
   "engines": {
     "node": ">=6"
