--- a/webserver/package.json
+++ b/webserver/package.json
@@ -25,6 +25,8 @@
   },
   "scripts": {
     "start": "gulp watch",
-    "build": "gulp build"
+    "build": "gulp build",
+    "postinstall": "npm run check-install",
+    "check-install": "node -e \"require('supercolliderjs').checkInstall()\""
   }
 }
