--- a/webserver/package.json
+++ b/webserver/package.json
@@ -14,7 +14,8 @@
     "gulp-nodemon": "^2.2.1",
     "lodash": "^4.16.6",
     "socket.io": "^1.5.1",
-    "socket.io-client": "^1.5.1"
+    "socket.io-client": "^1.5.1",
+    "supercolliderjs": "^0.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
